--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "filebrowser-frontend",
-  "version": "2.0.0",
+  "name": "vue-bpmn-filebrowser",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,29 +10,31 @@
   },
   "dependencies": {
     "ace-builds": "^1.4.7",
+    "bpmn-js": "^6.1.2",
+    "camunda-bpmn-moddle": "^4.3.0",
     "clipboard": "^2.0.4",
+    "element-ui": "^2.13.0",
     "js-base64": "^2.5.1",
     "lodash.clonedeep": "^4.5.0",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "noty": "^3.2.0-beta",
-    "qrcode.vue": "^1.6.3",
-    "vue": "^2.6.10",
-    "vue-i18n": "^8.15.0",
+    "qrcode.vue": "^1.7.0",
+    "vue": "^2.6.11",
+    "vue-i18n": "^8.15.3",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1",
-    "vuex-router-sync": "^5.0.0",
-    "bpmn-js": "^5.1.2"
+    "vuex": "^3.1.2",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.5",
-    "@vue/cli-plugin-eslint": "^4.0.5",
-    "@vue/cli-service": "^4.0.5",
+    "@vue/cli-plugin-babel": "^4.1.1",
+    "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-service": "^4.1.1",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^6.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "eslint-plugin-vue": "^6.0.1",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
@@ -43,7 +45,9 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-console": "off"
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
